--- a/webapp/index.html
+++ b/webapp/index.html
@@ -7,7 +7,7 @@
   <link href="/resources/img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
 
-  <title>Custom Components</title>
+  <title>Base Controller Template</title>
 
   <script id="sap-ui-bootstrap"
           src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
